--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,34 +1,35 @@
-@import '_generic.reset.less';
-@import '_generic.font-faces.less';
-@import '_generic.typography.less';
-@import '_generic.shared.less';
-@import '_generic.layout.less';
-@import '_generic.colors.less';
+@import "_generic.reset.less";
+@import "_generic.font-faces.less";
+@import "_generic.typography.less";
+@import "_generic.shared.less";
+@import "_generic.layout.less";
+@import "_generic.colors.less";
 
-@import '_elements.headings.less';
-@import '_elements.headings-direct-link.less';
-@import '_elements.paragraph.less';
-@import '_elements.links.less';
-@import '_elements.strong.less';
-@import '_elements.emphasis.less';
-@import '_elements.small.less';
-@import '_elements.small-links.less';
-@import '_elements.lists.less';
-@import '_elements.quotes.less';
-@import '_elements.pre.less';
-@import '_elements.blockquote.less';
-@import '_elements.images.less';
-@import '_elements.invisible.less';
-@import '_elements.table.less';
-@import '_elements.horizontal-rule.less';
+@import "_elements.headings.less";
+@import "_elements.headings-direct-link.less";
+@import "_elements.paragraph.less";
+@import "_elements.links.less";
+@import "_elements.strong.less";
+@import "_elements.emphasis.less";
+@import "_elements.small.less";
+@import "_elements.small-links.less";
+@import "_elements.lists.less";
+@import "_elements.quotes.less";
+@import "_elements.pre.less";
+@import "_elements.blockquote.less";
+@import "_elements.images.less";
+@import "_elements.invisible.less";
+@import "_elements.table.less";
+@import "_elements.horizontal-rule.less";
+@import "_elements.section.less";
 
-@import '_objects.subheadings.less';
-@import '_objects.header.less';
-@import '_objects.top-drop.less';
-@import '_objects.navigation.less';
+@import "_objects.subheadings.less";
+@import "_objects.header.less";
+@import "_objects.top-drop.less";
+@import "_objects.navigation.less";
 
-@import '_objects.collection-navigation.less';
+@import "_objects.collection-navigation.less";
 
-@import '_objects.card.less';
+@import "_objects.card.less";
 
-@import '_objects.license.less';
+@import "_objects.license.less";
