Improve heading colours

--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -140,6 +140,7 @@
 .header__title {
   font-family: var(--display-font);
   font-size: var(--title-font-size);
+  color: var(--palette-white);
   line-height: 1;
 
   position: sticky;
