--- a/src/style/_objects.subheadings.less
+++ b/src/style/_objects.subheadings.less
@@ -2,7 +2,7 @@
   font-size: var(--font-size);
   font-family: var(--display-font);
   font-variant: small-caps;
-  color: var(--theme-stroke-lc);
+  color: var(--palette-gs-500);
   margin-top: 0;
   line-height: 1;
   text-align: center;
