--- a/src/style/_elements.headings.less
+++ b/src/style/_elements.headings.less
@@ -17,11 +17,14 @@ h6 {
 
   break-after: avoid-page;
   break-inside: avoid-page;
+
+  color: var(--palette-primary-300);
 }
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-family: var(--display-font);
   font-variant-caps: small-caps;
   font-weight: var(--font-weight-normal);
@@ -53,8 +56,8 @@ h3 {
 }
 
 h4 {
-  font-size: var(--font-size-s);
-  font-weight: var(--font-weight-x-bold);
+  font-size: var(--font-size-xs);
+  font-weight: var(--font-weight-normal);
 
   margin-top: calc(var(--content-spacing));
 }
