Improve colour definitions

--- a/src/style/_elements.headings.less
+++ b/src/style/_elements.headings.less
@@ -18,7 +18,7 @@ h6 {
   break-after: avoid-page;
   break-inside: avoid-page;
 
-  color: var(--palette-primary-300);
+  color: var(--theme-primary-lc);
 }
 
 h1,
