Improve table style

--- a/src/style/_elements.table.less
+++ b/src/style/_elements.table.less
@@ -1,5 +1,13 @@
-td, th {
-  padding: 0.5em;
+table {
+  margin: auto;
+  margin-top: 1em;
+  border: 0.5em solid var(--theme-background-lc);
+  background-color: var(--theme-background-lc);
+}
+
+td,
+th {
+  padding: 0.25em;
   min-width: 3em;
 }
 
