Add styling for aside

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -22,6 +22,7 @@
 @import "_elements.table.less";
 @import "_elements.horizontal-rule.less";
 @import "_elements.section.less";
+@import "_elements.aside.less";
 
 @import "_objects.subheadings.less";
 @import "_objects.header.less";
