--- a/src/view/_includes/default.njk
+++ b/src/view/_includes/default.njk
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/style/main.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/vmh6sew.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+    <script type="module" src="/js/register-sw.js"></script>
+    <script type="module" src="/js/main.js"></script>
     <title>{{title}}</title>
   </head>
   <body>
