--- a/src/style/main.less
+++ b/src/style/main.less
@@ -23,6 +23,7 @@
 @import "_elements.horizontal-rule.less";
 @import "_elements.section.less";
 @import "_elements.aside.less";
+@import "_elements.figure.less";
 
 @import "_objects.subheadings.less";
 @import "_objects.header.less";
